methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:12: error: not found: value color
  setBrushColor(color.YELLOW)
                ^